--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native/assets": "^1.0.0",
     "axios": "^0.27.2",
+    "eas-cli": "^0.60.0",
     "expo": "~46.0.6",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
